--- a/DataCleaning/Data_Collapse.ipynb
+++ b/DataCleaning/Data_Collapse.ipynb
@@ -27,12 +27,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 103,
+   "execution_count": 1,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(4, 2)\n   index  count\n0      0      2\n1      1      2\n2      2      3\n3      3      3\n"
+      "(4, 2)\n        SHEETBAR  count\n22957   42009244      2\n97418   46015274      2\n104734  47000506      3\n104840  47000678      3\n"
      ]
     }
    ],
@@ -118,14 +118,14 @@
     "unique_sheetbars = pd.DataFrame(unique_sheetbars, columns = ['count']).reset_index()\n",
     "\n",
     "# Filter out the sheetbar codes that have multiple rows \n",
-    "duplicate_sheetbars = duplicates[duplicates['count'] > 1]\n",
+    "duplicate_sheetbars = unique_sheetbars[unique_sheetbars['count'] > 1]\n",
     "print(duplicate_sheetbars.shape)\n",
     "print(duplicate_sheetbars)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,34 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "KeyError",
-     "evalue": "'SHEETBAR'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3080\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'SHEETBAR'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-111-3537d31a4d2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Since we only need to examine the data that has duplicate barcodes, we can set aside the unique barcodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcollapsed_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'SHEETBAR'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mduplicate_sheetbars\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'SHEETBAR'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcollapsed_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Store the rows with the repeated sheetbars called data_dups\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3023\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3024\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3084\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'SHEETBAR'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(105143, 18)\n(10, 18)\n"
      ]
     }
    ],
    "source": [
     "# Since we only need to examine the data that has duplicate barcodes, we can set aside the unique barcodes\n",
-    "collapsed_data = data[-pd.Series(data['SHEETBAR']).isin(duplicate_sheetbars['SHEETBAR'])]\n",
+    "collapsed_data = data[-pd.Series(data[\"SHEETBAR\"]).isin(duplicate_sheetbars['SHEETBAR'])]\n",
     "print(collapsed_data.shape)\n",
     "\n",
     "# Store the rows with the repeated sheetbars called data_dups \n",
@@ -172,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -214,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(4, 17)\n"
+      "(4, 18)\n"
      ]
     }
    ],
@@ -233,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,26 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Int64Index([     0,      1,      2,      3,      4,      5,      6,      8,\n                 9,     10,\n            ...\n            105261, 105262, 105263, 105264, 105265, 105266,      0,      1,\n                 2,      3],\n           dtype='int64', length=105147)\nInt64Index([     0,      1,      2,      3,      4,      5,      6,      8,\n                 9,     10,\n            ...\n            105261, 105262, 105263, 105264, 105265, 105266,      0,      1,\n                 2,      3],\n           dtype='int64', length=105147)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(collapsed_data.index)\n",
-    "collapsed_data.reset_index(drop = True)\n",
-    "print(collapsed_data.index)"
+    "#print(collapsed_data.index)\n",
+    "#collapsed_data.reset_index(drop = True)\n",
+    "#print(collapsed_data.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
